# injiget_char

./: .gitignore  README.md
Classfication_data/: Inji_object_Detection.txt
Classfication_data/labels/: 20230603_020106_jpg.rf.dcaa3cad9f1aa6c28ff6c640bfa322c6.txt  20230603_020208_jpg.rf.c684b127dabdaacb40b3c81639cd75cf.txt  20230603_020239_jpg.rf.362d0527f1c01414cd41606315616a29.txt  20230603_020246_jpg.rf.95b6a07a1c877e723a28ccbb7e3c03a0.txt  20230603_020252_jpg.rf.d1ce834d5e9bb21e4150ff97ae093c25.txt  20230603_020258_jpg.rf.9e94509967ff58e439deec52fa5b0a8e.txt  20230603_020310_jpg.rf.628a08760c2cc8408b1f9b16f140afe5.txt  20230603_020316_jpg.rf.8478e677c786c2bae474da35a1acea9d.txt  20230603_021539_jpg.rf.ed8a84ce6c340a5e6f344c5b84ef4c55.txt  20230603_021606_jpg.rf.d5b045587c8d4b26302b5296d52d4ad4.txt  20230603_021628_jpg.rf.caac9712d89ef9f415c84c3de77fd478.txt  20230603_021632_jpg.rf.7a07a96ed252b53d6f9fb6cb9e028fd6.txt  20230603_021655_jpg.rf.cfc2139ad40ec72075ef62b2404f54ec.txt  20230603_021656_jpg.rf.01e1b0655d95404331c44ba89060b106.txt  20230603_021658_jpg.rf.4ab55dd4d5667ea689f7aa09e9ff0966.txt  20230603_021752_jpg.rf.a3a241307ac4885a7b0fa103b2c5e653.txt  20230603_021755_jpg.rf.3069c3ae22cf96bd6fc70f85f78d08bb.txt  20230603_021806_jpg.rf.3d90fc5799a54b91f592672282dfbab0.txt  20230603_021808_jpg.rf.7518329a1d052fbc34679b6b827909b8.txt  20230604_032809_jpg.rf.b92bb83c17c1c53ac57f5f52e14b0f4f.txt  20230604_032816_jpg.rf.61f65b57fd0ed865c48f8c059e8974c2.txt
Classfication_data/test/labels/: 20230603_021850_jpg.rf.c33090b3af7aaf7b8b3d829fc4d76a87.txt  20230604_033030_jpg.rf.dbe448c2c982e029b3cbabc16744e2b1.txt  20230604_033334_jpg.rf.c5efdad89b6c98ef342dcb2bc16d410b.txt
Classfication_data/valid/labels/: 20230603_020045_jpg.rf.c82c73e13cb65c51afb7d48c92b61024.txt  20230603_020119_jpg.rf.acd8f37eedbce431375756228b212a56.txt  20230603_020143_jpg.rf.79eb5c3c127c25c430039ad1adec677e.txt  20230603_020145_jpg.rf.1b659554d9f68cbbbfd85f00a128c506.txt  20230603_020149_jpg.rf.ae25333e3ae659a490c5f2d49fdee027.txt  20230603_020206_jpg.rf.34bb80d913483d4c8b5cd9ab4188fb61.txt  20230603_020218_jpg.rf.2ae5cbbd06c028ffbcbd92efc4ba87c9.txt  20230603_020220_jpg.rf.c7a5dc8b5b59b5268bf01651f910e2cc.txt  20230603_020254_jpg.rf.39a7f1d0f55d40cf103ba88838e0d5d4.txt  20230603_020313_jpg.rf.1b5139c783d607170d1faa3a93713954.txt  20230603_020315_jpg.rf.4b51558a72b552d37b020d584fdd5f6d.txt  20230603_020358_jpg.rf.fa6a4125448f83522ab3cc7ac04db650.txt  20230603_021550_jpg.rf.635f77aebe9fba39fe6efa6f6588ce7b.txt  20230603_021553_jpg.rf.74e049073103d2b2e10cdaaba5d1018b.txt  20230603_021601_jpg.rf.309af32fefbca3a13368dfb1a95ead5f.txt  20230603_021607_jpg.rf.e8cea0368363a0f022210444e947aa1a.txt  20230603_021736_jpg.rf.abcb746f93b70a221992c2dcb052bdbb.txt  20230603_021738_jpg.rf.93d110a485458ba60fda9c8b9a103315.txt  20230603_021754_jpg.rf.9d09d6f963c583a38741da1e5150a523.txt  20230603_021807_jpg.rf.64e7e41af919909369809bd3021d30e6.txt  20230603_021810_jpg.rf.40053d3911d7cee2266954bce56cd860.txt  20230603_021813_jpg.rf.233a31f8774040a05857fcd221dbb02a.txt  20230603_021852_jpg.rf.ed8860cc5160db5f7eccf58390c48512.txt  20230603_021853_jpg.rf.31cbfbb6bd2560163e979f1466f9b3c7.txt  20230603_021924_jpg.rf.1c3965e1a8a0c8d5b8b206c7f7d28443.txt  20230603_021944_jpg.rf.e78b0d84f687c1a0db446f038a1e28da.txt  20230604_032730_jpg.rf.6d4530dbd8cfe9562586c43c152e9dc2.txt  20230604_032906_jpg.rf.9f0567b9a6123d70999894e395719769.txt  20230604_032909_jpg.rf.52bf6bd42e188d7a3c6a428a0d6b1532.txt  (+11 more)
auto_drive/: CMakeLists.txt  package.xml
auto_drive/src/: detect_yellow_node.cpp  drive_node.cpp  line_drive_node.cpp
cam_pub/: CMakeLists.txt  package.xml
cam_pub/scripts/: cam_pub_node.py
classification/: .label.swp  CMakeLists.txt  classification_node.py  label  package.xml
classification/labels/: 20230603_020148_jpg.rf.f6368a866bdcf5db25a9c57458fe8f7a.txt  20230603_020152_jpg.rf.27faee65b27cd272c2f2009c6fb4e846.txt  20230603_020219_jpg.rf.7d4650a107e064d9ef58339fe5dc394f.txt  20230603_020221_jpg.rf.6d80065bd1e7e94e290c6dd99e170661.txt  20230603_020244_jpg.rf.74c355bc41fcf5f1824af85bb9e25f44.txt  20230603_020256_jpg.rf.a4af0c4137e831a78e4b5707787daecc.txt  20230603_020333_jpg.rf.d6dc16181e5f39e79a6abf0a97d7f1e6.txt  20230603_021812_jpg.rf.892834437299f80f54086f603a95d1ae.txt  20230603_021849_jpg.rf.6be434c5f4de3bd6c666d4680ca9bf06.txt  20230604_032734_jpg.rf.1ce824231928f318f98356135a0f4a0d.txt  20230604_032737_jpg.rf.bb73eb5a1280cd6bcbb68b07ecc3159b.txt  20230604_032807_jpg.rf.552f2e73739264b40f7bce2d96b8b3b8.txt  20230604_033007_jpg.rf.aa7b292942c58ef12af9e19b5b51d55d.txt  20230604_033012_jpg.rf.ceeec3c154b985d9b72acf0f2f8de6c6.txt  20230604_033055_jpg.rf.237f96413385ad4a1d141201d35b4dcd.txt  20230604_033320_jpg.rf.bbb3689e3d84821d6a3a6d4915935424.txt
classification/scripts/: classification_node.py
dataset_maker/: datasetMaker.py
injiget_char/: CMakeLists.txt  package.xml
injiget_char/launch/: classification.launch  line_tracking.launch  ocr.launch  pallet_pick.launch  place.launch  place_test.launch  start.launch  test.launch
injiget_char/src/: start_node.cpp
line_det/: CMakeLists.txt  package.xml
line_det/script/: line_det_node.py
line_det/scripts/: det_test.py  line_det_node.py  pallet_det_node.py
line_detect/: CMakeLists.txt  README.md  package.xml
line_detect/src/: detect_node.cpp  finish_line_detect_node.cpp  test_color.cpp
object_cnn/: CMakeLists.txt  package.xml
ocr/: CMakeLists.txt  package.xml
ocr/scripts/: ocr_node.py  trocr.py
ocr/src/: image_preprocess.py  tesseract.py  trocr.py
pallet_det/: CMakeLists.txt  package.xml
pallet_det/script/: pallet_det_node.py
pallet_det/scripts/: send_ref_img.py
pallet_det/src/: pallet_det_node.cpp
pick_move/: CMakeLists.txt  package.xml
pick_move/src/: pallet_drive_node.cpp
place_move/: CMakeLists.txt  package.xml
place_move/src/: place_node.cpp
servo_control/: CMakeLists.txt  package.xml
servo_control/launch/: servo_control.launch
servo_control/scripts/: fork_control.py  tilt_contorl.py  tilt_control.py
