<?xml version="1.0"?>
<package format="2">
  <name>auto_drive</name>
  <version>0.1.0</version>
  <description>
  The auto_drive package. Implement line tracking
  (i.e, follow the line) and when meet the finish line, stop and align robot.
  </description>

  <maintainer email="kwonjin@kaist.ac.kr">Kwon Jin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>OpenCV</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>OpenCV</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>



  <export>

  </export>
</package>
