<?xml version="1.0"?>
<package format="2">
  <name>classification</name>
  <version>0.1.0</version>
  <description>The classification package by using YOLO</description>
  <maintainer email="kwonjin@kaist.ac.kr">Kwon Jin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
